--- a/CSharpFileMergeTool/MainWindow.xaml
+++ b/CSharpFileMergeTool/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="CSharpFileMergeTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="C# Source File Merging Utility" Height="350" Width="525">
     <Grid>
-        
+        <TextBlock x:Name="fileNamesTextBlock" Margin="10,10,10,10" TextWrapping="Wrap" Height="Auto" AllowDrop="True" Drop="fileNamesTextBlock_Drop" />
+
     </Grid>
 </Window>
