--- a/CSharpFileMergeTool/MainWindow.xaml
+++ b/CSharpFileMergeTool/MainWindow.xaml
@@ -1,9 +1,33 @@
-﻿<Window x:Class="CSharpFileMergeTool.MainWindow"
+﻿<Window x:Class="CSharpFileMergeTool.MainWindow" Name="This"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="C# Source File Merging Utility" Height="350" Width="525">
+        Title="C# Source File Merging Utility" Height="500" Width="800">
     <Grid>
-        <TextBlock x:Name="fileNamesTextBlock" Margin="10,10,10,10" TextWrapping="Wrap" Height="Auto" AllowDrop="True" Drop="fileNamesTextBlock_Drop" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <ListBox ItemsSource="{Binding ElementName=This, Path=FileList}"
+                  x:Name="fileNamesListView" Grid.Column="0" AllowDrop="True"
+                  Drop="fileNamesTextBlock_Drop" HorizontalAlignment="Stretch"
+                 Padding="3,4,5,4">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                </Style>
+            </ListBox.ItemContainerStyle>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderThickness="1" BorderBrush="LightGray" Margin="0,1,0,0">
+                        <TextBlock Text="{Binding Name}" ToolTip="{Binding Path}"
+                                   Background="White" Height="40" HorizontalAlignment="Center"
+                                   TextAlignment="Center" FontSize="20" FontFamily="Segoe UI"
+                                   Padding="0,4,0,0"/>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <TextBlock Grid.Column="1" Margin="0,0,0,0" TextWrapping="Wrap" Height="Auto"/>
 
     </Grid>
 </Window>
