--- a/CSharpFileMergeTool/MainWindow.xaml
+++ b/CSharpFileMergeTool/MainWindow.xaml
@@ -2,12 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="C# Source File Merging Utility" Height="500" Width="800">
-    <Grid>
+    <Grid DataContext="{Binding ElementName=This, Path=.}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding ElementName=This, Path=FileList}"
+        <ListBox ItemsSource="{Binding Path=FileList}"
                   x:Name="fileNamesListView" Grid.Column="0" AllowDrop="True"
                   Drop="fileNamesTextBlock_Drop" HorizontalAlignment="Stretch"
                  Padding="3,4,5,4">
@@ -27,7 +27,9 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <TextBlock Grid.Column="1" Margin="0,0,0,0" TextWrapping="Wrap" Height="Auto"/>
+        <TextBox Grid.Column="1" Margin="0,0,-590,0" TextWrapping="NoWrap"
+                   Height="Auto" Text="{Binding Path=MergedFileText}"
+                   Padding="5" FontFamily="Consolas" FontSize="10"/>
 
     </Grid>
 </Window>
